portfolio-creator/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: portfolio-creator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/haverford-cc/portfolio-creator-frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 20m
              memory: 10Mi
            limits:
              cpu: 50m
              memory: 25Mi
          ports:
            - containerPort: 3000
