portfolio-creator/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: portfolio-creator
spec:
  selector:
    app: frontend
  ports:
    - port: 80
