portfolio-creator/frontend/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: portfolio-creator
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portfolio-creator.dens.dev`)
      kind: Rule
      services:
        - name: frontend
          port: 80
  tls:
    secretName: dens.dev-tls
